test/official_tests/variable/duplicate_local.lox
{
  var a = "value";
  var a = "other"; // error: {"line":3,"message":"Variable 'a' is already declared in this scope","type":"RuntimeError"}
}
